istio/shop-app-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop-app
spec:
  hosts:
    - "*"
  gateways:
    - shop-app-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/product-ms
      rewrite:
        uri: /
      route:
        - destination:
            host: product
            port:
              number: 8080
